Add sensor agent and device agent

--- a/MovieStore/nbproject/private/private.properties
+++ b/MovieStore/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-gui STAR:MovieStore.Store;CLOUD:MovieStore.Store;WIND:MovieStore.Store;customer1:MovieStore.Customer
+application.args=-gui sensor:SmartHome.Sensor;air:SmartHome.AirConditional
 compile.on.save=true
 do.depend=false
 do.jar=true
