--- a/Demo_20160303/Tutorial/nbproject/private/private.properties
+++ b/Demo_20160303/Tutorial/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-gui seller1:booktradding.BookSellerAgent;seller2:booktradding.BookSellerAgent
+application.args=-gui receiver:sendmessage.Receiver
 compile.on.save=true
 do.depend=false
 do.jar=true
