--- a/MovieStore/nbproject/private/private.properties
+++ b/MovieStore/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-gui sensor:SmartHome.Sensor;air:SmartHome.AirConditional
+application.args=-gui sensor:SmartHome.Sensor;deviceRefri:SmartHome.Refrigerator;deviceAir:SmartHome.AirConditional;manager:SmartHome.AgentManager
 compile.on.save=true
 do.depend=false
 do.jar=true
