Complete demo program
Hoàn thiện chương trình nhà thông minh

--- a/MovieStore/nbproject/private/private.properties
+++ b/MovieStore/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-gui sensor:SmartHome.Sensor;deviceRefri:SmartHome.Refrigerator;deviceAir:SmartHome.AirConditional;manager:SmartHome.AgentManager
+application.args=-gui sensor:SmartHome.Sensor;deviceFan:SmartHome.Fan;deviceRefri:SmartHome.Refrigerator;deviceAir:SmartHome.AirConditional;deviceTV:SmartHome.Television;deviceLam:SmartHome.Lamp;deviceWas:SmartHome.WashingMachine;manager:SmartHome.AgentManager
 compile.on.save=true
 do.depend=false
 do.jar=true
