--- a/MovieStore/nbproject/project.properties
+++ b/MovieStore/nbproject/project.properties
@@ -37,7 +37,7 @@ file.reference.jadeExamples.jar=C:\\hunglv\\JADE\\jade\\lib\\jadeExamples.jar
 file.reference.jadeTools.jar=C:\\hunglv\\JADE\\jade\\lib\\jadeTools.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\hunglv\\mysql\\lib\\mysql-connector-java-5.1.38-bin.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.commons-codec-1.3.jar}:\
     ${file.reference.http.jar}:\
