--- a/SmartHome/nbproject/project.properties
+++ b/SmartHome/nbproject/project.properties
@@ -35,7 +35,6 @@ file.reference.iiop.jar=C:\\hunglv\\JADE\\jade\\lib\\iiop.jar
 file.reference.jade.jar=C:\\hunglv\\JADE\\jade\\lib\\jade.jar
 file.reference.jadeExamples.jar=C:\\hunglv\\JADE\\jade\\lib\\jadeExamples.jar
 file.reference.jadeTools.jar=C:\\hunglv\\JADE\\jade\\lib\\jadeTools.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\hunglv\\mysql\\lib\\mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -44,11 +43,11 @@ javac.classpath=\
     ${file.reference.iiop.jar}:\
     ${file.reference.jade.jar}:\
     ${file.reference.jadeExamples.jar}:\
-    ${file.reference.jadeTools.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.jadeTools.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
