Update slide và report

--- a/Demo_20160303/Tutorial/nbproject/private/private.properties
+++ b/Demo_20160303/Tutorial/nbproject/private/private.properties
@@ -2,6 +2,7 @@ application.args=-gui receiver:sendmessage.Receiver
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.iiop.jar=D:\\Lib\\JADE\\iiop.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\hunglv.TOSHIBA-TSDV\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\hunglv\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
