--- a/Demo_20160303/Tutorial/nbproject/project.properties
+++ b/Demo_20160303/Tutorial/nbproject/project.properties
@@ -30,11 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.3.jar=C:\\hunglv\\JADE\\jade\\lib\\commons-codec\\commons-codec-1.3.jar
+file.reference.commons-codec-1.3.jar-1=D:\\Lib\\JADE\\commons-codec-1.3.jar
 file.reference.http.jar=C:\\hunglv\\JADE\\jade\\lib\\http.jar
+file.reference.http.jar-1=D:\\Lib\\JADE\\http.jar
 file.reference.iiop.jar=C:\\hunglv\\JADE\\jade\\lib\\iiop.jar
 file.reference.jade.jar=C:\\hunglv\\JADE\\jade\\lib\\jade.jar
+file.reference.jade.jar-1=D:\\Lib\\JADE\\jade.jar
 file.reference.jadeExamples.jar=C:\\hunglv\\JADE\\jade\\lib\\jadeExamples.jar
+file.reference.jadeExamples.jar-1=D:\\Lib\\JADE\\jadeExamples.jar
 file.reference.jadeTools.jar=C:\\hunglv\\JADE\\jade\\lib\\jadeTools.jar
+file.reference.jadeTools.jar-1=D:\\Lib\\JADE\\jadeTools.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,10 +48,16 @@ javac.classpath=\
     ${file.reference.jade.jar}:\
     ${file.reference.jadeTools.jar}:\
     ${file.reference.jadeExamples.jar}:\
-    ${file.reference.commons-codec-1.3.jar}
+    ${file.reference.commons-codec-1.3.jar}:\
+    ${file.reference.commons-codec-1.3.jar-1}:\
+    ${file.reference.http.jar-1}:\
+    ${file.reference.jade.jar-1}:\
+    ${file.reference.jadeExamples.jar-1}:\
+    ${file.reference.jadeTools.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
